- Fixed Javascript thinking I was trying to concatenate  strings instead of adding integers

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <input id="black" type="number" value="0" />
         <input id="red" type="number" value="0" />
         <input id="green" type="number" value="0" />
-        <div id ="rOut">0</div>
-        <div id ="uOut">0</div>
-        <div id ="bOut">0</div>
-        <div id ="wOut">0</div>
-        <div id ="gOut">0</div>
+        <p id ="rOut">0</p>
+        <p id ="uOut">0</p>
+        <p id ="bOut">0</p>
+        <p id ="wOut">0</p>
+        <p id ="gOut">0</p>
         <button onclick="calcAll()">Click me</button>
     </body>
 </html>
