--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
         <script src="JS/main.js"></script>
     </head>
     <body>
-        <input id="land" type="number" value="0" />
-        <input id="red" type="number" value="0" />
-        <input id="blue" type="number" value="0" />
-        <input id="white" type="number" value="0" />
-        <input id="black" type="number" value="0" />
-        <input id="red" type="number" value="0" />
-        <input id="green" type="number" value="0" />
+        <main>
+            <input id="land" type="number" value="0" />
+            <input id="red" type="number" value="0" />
+            <input id="blue" type="number" value="0" />
+            <input id="white" type="number" value="0" />
+            <input id="black" type="number" value="0" />
+            <input id="red" type="number" value="0" />
+            <input id="green" type="number" value="0" />
+            <input id="colorless" type="number" value="0" />
+        </main>
+        
         <p id ="rOut">0</p>
         <p id ="uOut">0</p>
         <p id ="bOut">0</p>
         <p id ="wOut">0</p>
         <p id ="gOut">0</p>
+        <p id ="lOut">0</p>
         <button onclick="calcAll()">Click me</button>
     </body>
 </html>
