- Made input boxes for colors look nicer - Added mana symbols

--- a/index.html
+++ b/index.html
@@ -7,14 +7,35 @@
     </head>
     <body>
         <main>
-            <input id="land" type="number" value="0" />
-            <input id="red" type="number" value="0" />
-            <input id="blue" type="number" value="0" />
-            <input id="white" type="number" value="0" />
-            <input id="black" type="number" value="0" />
-            <input id="red" type="number" value="0" />
-            <input id="green" type="number" value="0" />
-            <input id="colorless" type="number" value="0" />
+            <div class="landSection">
+                <input id="land" type="number" value="0" />
+            </div>
+            <div class="inputSection">
+                <div class="rSec">
+                    <img src="IMG/rSymbol.svg">
+                    <input id="red" type="number" value="0" />
+                </div>
+                <div class="uSec">
+                    <img src="IMG/uSymbol.svg">
+                    <input id="blue" type="number" value="0" />
+                </div>
+                <div class="bSec">
+                    <img src="IMG/bSymbol.svg">
+                    <input id="black" type="number" value="0" />
+                </div>
+                <div class="wSec">
+                    <img src="IMG/wSymbol.svg">
+                    <input id="white" type="number" value="0" />
+                </div>
+                <div class="gSec">
+                    <img src="IMG/gSymbol.svg">
+                    <input id="green" type="number" value="0" />
+                </div>
+                <div class="cSec">
+                    <img src="IMG/cSymbol.svg">
+                    <input id="colorless" type="number" value="0" />
+                </div>
+            </div>
         </main>
         
         <p id ="rOut">0</p>
