--- a/index.html
+++ b/index.html
@@ -3,37 +3,36 @@
     <head>  
         <title>Manabase Calculator</title>
         <link rel="stylesheet" href="CSS/main.css">
-        <script src="JS/main.js"></script>
     </head>
     <body>
         <main>
             <div class="landSection">
-                <input id="land" type="number" value="0" />
+                <p>Land Amount:</p> <input id="land" class="input" type="number" value="0" />   
             </div>
             <div class="inputSection">
                 <div class="rSec">
                     <img src="IMG/rSymbol.svg">
-                    <input id="red" type="number" value="0" />
+                    <input id="red" class="input" type="number" value="0" />
                 </div>
                 <div class="uSec">
                     <img src="IMG/uSymbol.svg">
-                    <input id="blue" type="number" value="0" />
+                    <input id="blue" class="input" type="number" value="0" />
                 </div>
                 <div class="bSec">
                     <img src="IMG/bSymbol.svg">
-                    <input id="black" type="number" value="0" />
+                    <input id="black" class="input" type="number" value="0" />
                 </div>
                 <div class="wSec">
                     <img src="IMG/wSymbol.svg">
-                    <input id="white" type="number" value="0" />
+                    <input id="white" class="input" type="number" value="0" />
                 </div>
                 <div class="gSec">
                     <img src="IMG/gSymbol.svg">
-                    <input id="green" type="number" value="0" />
+                    <input id="green" class="input" type="number" value="0" />
                 </div>
                 <div class="cSec">
                     <img src="IMG/cSymbol.svg">
-                    <input id="colorless" type="number" value="0" />
+                    <input id="colorless" class="input" type="number" value="0" />
                 </div>
             </div>
         </main>
@@ -44,6 +43,7 @@
         <p id ="wOut">0</p>
         <p id ="gOut">0</p>
         <p id ="lOut">0</p>
-        <button onclick="calcAll()">Click me</button>
+
+        <script src="JS/main.js"></script>
     </body>
 </html>
