- made the site look much better

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <main>
-            <div class="landSection">
-                <p>Land Amount:</p> <input id="land" class="input" type="number" value="0" />   
+            <div class="landSection" id="lSec">
+                <input id="land" class="input" type="number" placeholder="Amount of Lands" />   
             </div>
             <div class="inputSection">
                 <div class="rSec">
@@ -35,14 +35,30 @@
                     <input id="colorless" class="input" type="number" value="0" />
                 </div>
             </div>
+
+            <div class="outSection">
+                <div class="rSec">
+                    <p id ="rOut">0</p>
+                </div>
+                <div class="uSec">
+                    <p id ="uOut">0</p>
+                </div>
+                <div class="bSec">
+                    <p id ="bOut">0</p>
+                </div>
+                <div class="wSec">
+                    <p id ="wOut">0</p>
+                </div>
+                <div class="gSec">
+                    <p id ="gOut">0</p>
+                </div>
+                <div class="cSec">
+                    <p id ="lOut">0</p>
+                </div>
+            </div>
         </main>
         
-        <p id ="rOut">0</p>
-        <p id ="uOut">0</p>
-        <p id ="bOut">0</p>
-        <p id ="wOut">0</p>
-        <p id ="gOut">0</p>
-        <p id ="lOut">0</p>
+        
 
         <script src="JS/main.js"></script>
     </body>
